syntax = "proto3";

option go_package = "github.com/LagrangeDev/LagrangeGo/pkg/pb/service/oidb";

// Fetch Groups
message OidbSvcTrpcTcp0xFE5_2 {
  OidbSvcTrpcTcp0xFE5_2Config Config = 1;
}

message OidbSvcTrpcTcp0xFE5_2Config {
  OidbSvcTrpcTcp0xFE5_2Config1 Config1 = 1;
  OidbSvcTrpcTcp0xFE5_2Config2 Config2 = 2;
  OidbSvcTrpcTcp0xFE5_2Config3 Config3 = 3;
}

message OidbSvcTrpcTcp0xFE5_2Config1 {
  // all true
  bool GroupOwner = 1;
  bool Field2 = 2;
  bool MemberMax = 3;
  bool MemberCount = 4;
  bool GroupName = 5;
  bool Field8 = 8;
  bool Field9 = 9;
  bool Field10 = 10;
  bool Field11 = 11;
  bool Field12 = 12;
  bool Field13 = 13;
  bool Field14 = 14;
  bool Field15 = 15;
  bool Field16 = 16;
  bool Field17 = 17;
  bool Field18 = 18;
  bool Question = 19;
  bool Field20 = 20;
  bool Field22 = 22;
  bool Field23 = 23;
  bool Field24 = 24;
  bool Field25 = 25;
  bool Field26 = 26;
  bool Field27 = 27;
  bool Field28 = 28;
  bool Field29 = 29;
  bool Field30 = 30;
  bool Field31 = 31;
  bool Field32 = 32;
  bool Field5001 = 5001;
  bool Field5002 = 5002;
  bool Field5003 = 5003;
}

message OidbSvcTrpcTcp0xFE5_2Config2 {
  // all ture
  bool Field1 = 1;
  bool Field2 = 2;
  bool Field3 = 3;
  bool Field4 = 4;
  bool Field5 = 5;
  bool Field6 = 6;
  bool Field7 = 7;
  bool Field8 = 8;
}

message OidbSvcTrpcTcp0xFE5_2Config3 {
  bool Field5 = 5;
  bool Field6 = 6;
}

message OidbSvcTrpcTcp0xFE5_2Response {
  repeated OidbSvcTrpcTcp0xFE5_2Group Groups = 2;
}

message OidbSvcTrpcTcp0xFE5_2Group {
  uint32 GroupUin = 3;
  OidbSvcTrpcTcp0xFE5_2GroupInfo Info = 4;
}

message OidbSvcTrpcTcp0xFE5_2GroupInfo {
  OidbSvcTrpcTcp0xFE5_2Member GroupOwner = 1;
  uint32 MemberMax = 3;
  uint32 MemberCount = 4;
  string GroupName = 5;
}

message OidbSvcTrpcTcp0xFE5_2Member {
  string Uid = 2;
}
